--- a/elena-email-theme/scss/_variables.scss
+++ b/elena-email-theme/scss/_variables.scss
@@ -1,8 +1,8 @@
 $container-width: 600px;
 
-$color-basic: #787B80;
+$color-basic: #787b80;
 $color-basic-heading: #384048;
-$color-1: #50C3AF;
+$color-1: #50c3af;
 $color-2: #d2d5da;
 $color-3: #293139;
 $color-bg-1: #f5f5f5;
@@ -10,8 +10,5 @@ $color-bg-2: #eeeeef;
 $color-4: #e2e3e4;
 
 $basic-font-size: 14px;
-$basic-font-stack: 'PT Sans', sans-serif;
+$basic-font-stack: "PT Sans", sans-serif;
 $semibold-weight: 600;
-
-
-
